src/test/deca/syntax/invalid/include_missing_quote.deca
#include include_joueur.decah
{ }

